<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".uicontrollers.AlertDetailsActivity">

    <TextView
        android:id="@+id/title_field_alert_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/label_alert_details"
        android:textSize="25sp" />
    <TextView
        android:id="@+id/type_field_alert_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="none"
        android:hint="@string/prompt_alert_type"/>

    <TextView
        android:id="@+id/location_field_alert_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="none"
        android:hint="@string/prompt_alert_location"/>

    <TextView
        android:id="@+id/time_field_alert_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="none"
        android:hint="@string/prompt_alert_time"/>

    <TextView
        android:id="@+id/submitter_field_alert_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="none"
        android:hint="@string/prompt_alert_submitter"/>

    <TextView
        android:id="@+id/likes_field_alert_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="none"
        android:hint="@string/prompt_alert_likes"/>

    <Button
        android:id="@+id/like_button_alert_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/action_like" />

    <Button
        android:id="@+id/back_button_alert_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/action_back" />

</LinearLayout>