<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".uicontrollers.AddAlertActivity">

    <TextView
        android:id="@+id/title_field_add_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/label_add_alert"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/type_spinner_add_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/alert_types_array"
        android:prompt="@string/prompt_choose_type"/>

    <Button
        android:id="@+id/finalize_button_add_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/action_add_alert" />

    <Button
        android:id="@+id/back_button_add_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/action_back" />
</LinearLayout>